5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1764_1185.log
== TEST (2019-05-30 09:51:05) 
-- CODE:
indice = array(eval(input("indice glicemico: ")))
i = 0 #posicao do vetor
oc = 0 #numero de ocorrencias

while(i<size(indice)):
	if(indice[i]>99):
		print(i)
		oc = oc + 1
	i=i+1
print(oc)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    indice = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:52:10) 
-- CODE:
glicemia = array(eval(input("indice glicemico: ")))
i = 0 #posicao do vetor
oc = 0 #numero de ocorrencias

while(i<size(glicemia)):
	if(glicemia[i]>99):
		print(i)
		oc = oc + 1
	i=i+1
print(oc)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    glicemia = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:54:34) 
-- CODE:
gl = array(eval(input("indice glicemico: ")))
i = 0 #posicao do vetor
oc = 0 #numero de ocorrencias

while(i<size(glicemia)):
	if(glicemia[i]>99):
		print(i)
		oc = oc + 1
	i=i+1
print(oc)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gl = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:55:14) 
-- CODE:
from numpy import*
gl = array(eval(input("indice glicemico: ")))
i = 0 #posicao do vetor
oc = 0 #numero de ocorrencias

while(i<size(gl)):
	if(gl[i]>99):
		print(i)
		oc = oc + 1
	i=i+1
print(oc)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:55:54) 
-- CODE:
from numpy import*
gl = array(eval(input("indice glicemico: ")))
i = 0 #posicao do vetor
oc = 0 #numero de ocorrencias

while(i<size(gl)):
	if(gl[i]>99):
		print(i)
		oc = oc + 1
	i=i+1
print(oc)
	
-- EXECUTION TIME:
0.386371
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
